--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Marne, 1st Battle of the, France, 1914'
 - !lcsh 'World War, 1914-1918 -- Personal narratives'
 - !lcc 'D501'
+- GITenberg
 title: 'Beyond the Marne: Quincy, Huiry, Voisins before and during the battle'
 url: http://www.gutenberg.org/ebooks/44599
